--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -1,37 +1,45 @@
+/* basic page css */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-header {
-    padding: 20px 35px;
-    width: 100%;
-    background-color: black;
-}
+
+/* navbar stuff */
 
 .nav-container {
+    padding: 50px 40px;
+    width: 100%;
+    background-color: black;
     background-image: url("./pictures/cool-gothic.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-header h1 {
+.navbar {
     font: 1em;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-    font-size: 50px;
     color: rgb(224, 226, 224);
     margin: 0;
     display: inline;
 }
 
-header h2 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
+.nav {
     font-size: 35px;
-    color: rgb(224, 226, 224);
+    display: inline;
+    list-style: none;
+    float: right;
+    margin-top: -45px;
+}
+
+header h1 {
+    font: 1em;
+    font-size: 50px;
+    margin: 0;
     display: inline;
 }
 
@@ -41,7 +49,6 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
@@ -50,13 +57,20 @@ header nav ul li {
 }
 
 header nav ul li a {
+    padding: 20px;
     font-weight: lighter;
-    font-size: 22px;
 }
+
+
+/* Megan THEE Stallion voice BODY-ODYODYODY CSS */
 
 .body {
     background-color: silver;
+    overflow-x: hidden;
 }
+
+
+/* picture stuff */
 
 .img {
     display: block;
@@ -67,23 +81,47 @@ header nav ul li a {
     margin: auto;
 }
 
+
+/* the zoom also affects the project images */
+
+.zoom {
+    transition: transform .2s;
+}
+
+.zoom:hover {
+    transform: scale(1.5);
+}
+
+
+/* section label "about me", "projects" and "contact me" */
+
 h3 {
+    margin-top: 12%;
     background-color: silver;
     text-align: center;
-    font: 1em sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     float: left;
     font-size: x-large;
 }
 
+
+/* about me section */
+
 .grid-container-1 {
+    font-family: 'Times New Roman', Times, serif;
     display: block;
     border: solid 1px rgb(224, 226, 224);
 }
 
 .about-me {
     font-size: xx-large;
-    margin: 12.5%;
+    margin: 10.5%;
     display: inline-block;
+    margin-top: 25px;
+}
+
+.about-me-para {
+    margin: auto;
 }
 
 .text1 {
@@ -92,14 +130,20 @@ h3 {
     background-color: silver;
 }
 
+
+/* projects section */
+
+
+/*
 .grid-container-2 {
     display: block;
     border: solid 1px rgb(224, 226, 224);
 }
+*/
 
 .work {
     font-size: xx-large;
-    margin: 20%;
+    margin: 10.5%;
     display: inline-block;
 }
 
@@ -109,31 +153,22 @@ h3 {
     background-color: silver;
 }
 
+
+/* contact me section */
+
+
+/*
 .grid-container-3 {
-    display: block;
     border: solid 1px rgb(224, 226, 224);
-}
+    display: inherit;
+}*/
 
 .contact-me {
-    font-size: xx-large;
-    margin: 20%;
-    display: inline-block;
+    margin: auto;
 }
 
 .form-info {
-    font-size: x-large;
-    margin-left: 100%;
-    padding: 0;
-    background-color: silver;
-    display: inline-block;
-}
-
-.zoom {
-    transition: transform .2s;
-}
-
-.zoom:hover {
-    transform: scale(1.5);
+    margin: auto;
 }
 
 @media (min-width: 600px) {
