--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -9,56 +9,65 @@
 
 /* navbar stuff */
 
-.nav-container {
-    padding: 50px 40px;
+nav {
+    font-size: 40px;
+    justify-content: space-between;
+    color: rgb(224, 226, 224);
+    display: flex;
+    transition: 0.85s;
+    z-index: 100;
     width: 100%;
-    background-color: black;
+    padding: 30px 20px;
     background-image: url("./pictures/cool-gothic.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.navbar {
-    font: 1em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    color: rgb(224, 226, 224);
-    margin: 0;
-    display: inline;
+
+/*
+.nav-container {
+    padding: 30px 20px;
+    background-image: url("./pictures/cool-gothic.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+*/
+
+span {
+    font-size: 45px;
+    margin-left: 10px;
 }
 
-.nav {
-    font-size: 35px;
-    display: inline;
-    list-style: none;
-    float: right;
-    margin-top: -45px;
-}
-
-header h1 {
-    font: 1em;
-    font-size: 50px;
-    margin: 0;
-    display: inline;
-}
-
-header a {
+a {
     text-decoration: none;
     color: rgb(224, 226, 224);
-}
-
-header nav {
-    margin: 7px 0;
-}
-
-header nav ul li {
-    display: inline;
-}
-
-header nav ul li a {
-    padding: 20px;
+    font-size: 35px;
     font-weight: lighter;
+}
+
+li {
+    display: inline;
+    position: relative;
+    padding-right: 25px;
+}
+
+
+/* navbar scrolling css */
+
+nav.scroll {
+    padding: 20px 10px;
+    background-color: black;
+    position: fixed;
+}
+
+nav.scroll span {
+    font-size: 35px;
+}
+
+nav.scroll li a {
+    font-size: 28px;
 }
 
 
@@ -109,8 +118,10 @@ h3 {
 
 .grid-container-1 {
     font-family: 'Times New Roman', Times, serif;
-    display: block;
+    display: inline-flex;
     border: solid 1px rgb(224, 226, 224);
+    align-items: center;
+    text-align: center;
 }
 
 .about-me {
@@ -118,10 +129,6 @@ h3 {
     margin: 10.5%;
     display: inline-block;
     margin-top: 25px;
-}
-
-.about-me-para {
-    margin: auto;
 }
 
 .text1 {
