--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -24,17 +24,6 @@ nav {
     background-size: cover;
 }
 
-
-/*
-.nav-container {
-    padding: 30px 20px;
-    background-image: url("./pictures/cool-gothic.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-*/
-
 span {
     font-size: 45px;
     margin-left: 10px;
@@ -71,11 +60,34 @@ nav.scroll li a {
 }
 
 
+/* banner edits */
+
+.banner {
+    width: 100%;
+    height: 470px;
+    background-repeat: no-repeat;
+    position: relative;
+    background-position: center;
+    display: block;
+}
+
+
 /* Megan THEE Stallion voice BODY-ODYODYODY CSS */
 
 .body {
     background-color: silver;
     overflow-x: hidden;
+}
+
+
+/* banner stuff */
+
+.banner {
+    padding-top: 100px;
+    width: 100%;
+    background-image: url("./pictures/104193.jpg");
+    background-image: cover;
+    background-color: black;
 }
 
 
@@ -88,6 +100,7 @@ nav.scroll li a {
     padding: 0px;
     width: 300px;
     margin: auto;
+    ;
 }
 
 
@@ -109,7 +122,6 @@ h3 {
     background-color: silver;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    float: left;
     font-size: x-large;
 }
 
@@ -118,7 +130,6 @@ h3 {
 
 .grid-container-1 {
     font-family: 'Times New Roman', Times, serif;
-    display: inline-flex;
     border: solid 1px rgb(224, 226, 224);
     align-items: center;
     text-align: center;
@@ -127,13 +138,10 @@ h3 {
 .about-me {
     font-size: xx-large;
     margin: 10.5%;
-    display: inline-block;
-    margin-top: 25px;
 }
 
 .text1 {
     font-size: x-large;
-    margin-left: 50%;
     background-color: silver;
 }
 
