--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -143,11 +143,13 @@ h2 {
     margin: auto;
 }
 
+
+/*
 h3 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-size: x-large;
-}
+}*/
 
 
 /* about me section */
@@ -209,19 +211,16 @@ h4::before {
 to the actual project */
 
 .grid-container-2 {
-    display: block;
+    display: inline;
     border: solid 1px rgb(224, 226, 224);
 }
 
 .work {
-    font-size: xx-large;
     margin: 10.5%;
-    display: inline-block;
 }
 
 .iframe-div {
-    font-size: x-large;
-    margin-left: 100%;
+    display: inline-flex;
     background-color: silver;
 }
 
@@ -240,11 +239,11 @@ I also need to fix the sizing structure*/
 }
 
 .contact-me {
-    display: inline-block;
+    display: inline-flex;
 }
 
 .form-info {
-    margin: auto;
+    display: block;
 }
 
 
