--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -131,7 +131,6 @@ h1 {
     margin-top: 5%;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    font-size: x-large;
     margin: auto;
 }
 
@@ -143,13 +142,10 @@ h2 {
     margin: auto;
 }
 
-
-/*
 h3 {
+    font-size: 3rem;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: x-large;
-}*/
+}
 
 
 /* about me section */
@@ -163,6 +159,18 @@ h3 {
     align-items: center;
     text-align: center;
 }
+
+.color-overlay {
+    background-color: wheat;
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    position: relative;
+    border: solid 5px maroon;
+}
+
+
+/* the welcome text CSS */
 
 h4 {
     position: relative;
@@ -219,9 +227,12 @@ to the actual project */
     margin: 10.5%;
 }
 
-.iframe-div {
+.Password-Generator {
     display: inline-flex;
-    background-color: silver;
+    margin: 7.5%;
+    width: 600px;
+    height: 600px;
+    border: solid 5px maroon;
 }
 
 
