--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -229,7 +229,6 @@ to the actual project */
 
 .Password-Generator {
     display: inline-flex;
-    margin: 7.5%;
     width: 600px;
     height: 600px;
     border: solid 5px maroon;
@@ -239,29 +238,54 @@ to the actual project */
 /* contact me section */
 
 
-/* I need to center and create a sleak transparent input form for people who want to write a message
+/* I need to center and create an input form for people who want to write a message
 I also need to fix the sizing structure*/
 
-.grid-container-3 {
+.contact-box {
     border: solid 1px rgb(3, 3, 3);
     padding-top: 250px;
-    width: 100%;
-    padding-bottom: 250px;
-}
-
-.contact-me {
-    display: inline-flex;
 }
 
 .form-info {
-    display: block;
+    width: 500px;
+    background-color: #fff;
+    box-shadow: 0 0 20px 0 #999;
+    position: relative;
+    margin: 35px;
+    margin-left: 35px;
+}
+
+.input-field {
+    width: 400px;
+    height: 40px;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid #777;
+    border-radius: 14px;
+    outline: none;
 }
 
 
 /* need to make a larger text area*/
 
-.textarea {
-    grid-row: span 4;
+.text-area {
+    height: 150px;
+    padding-top: 10px;
+}
+
+
+/*button adjustment*/
+
+.btn {
+    border-radius: 20px;
+    color: #fff;
+    margin-top: 18px;
+    padding: 10px;
+    background-color: #47c35a;
+    font-size: 12px;
+    border: none;
+    cursor: pointer;
 }
 
 @media (min-width: 600px) {
