--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -151,7 +151,7 @@ h3 {
 /* about me section */
 
 
-/* I need to get a better bio also fix some text sizing */
+/* Bio section */
 
 .grid-container-1 {
     font-family: 'Times New Roman', Times, serif;
@@ -215,7 +215,7 @@ h4::before {
 /* projects section */
 
 
-/* I need to update and get live link to the hosted page on github*/
+/* I need to update and get live link to the hosted page on github */
 
 .grid-container-2 {
     display: inline;
@@ -243,11 +243,10 @@ h4::before {
 }
 
 
-/* contact me section */
+/* CONTACT ME SECTION */
 
 
-/* I need to center and create an input form for people who want to write a message
-I also need to fix the sizing structure*/
+/* form section adjustment*/
 
 .grid-container-3 {
     display: block;
@@ -281,7 +280,7 @@ I also need to fix the sizing structure*/
 }
 
 
-/* need to make a larger text area*/
+/* form text area */
 
 .text-area {
     height: 150px;
@@ -289,7 +288,7 @@ I also need to fix the sizing structure*/
 }
 
 
-/*button adjustment*/
+/*send button adjustment*/
 
 .btn {
     border-radius: 20px;
@@ -355,13 +354,13 @@ I also need to fix the sizing structure*/
 
 /*responsive set up */
 
-@media (min-width: 600px) {
+@media screen (min-width: 600px) {
     .body {
         font-size: 1.25rem;
     }
 }
 
-@media (min-wdth: 800x) {
+@media screen (min-wdth: 800x) {
     .body {
         font-size: 1.5rem;
         line-height: 1.5;
